--- a/todo-list-svelte/public/index.html
+++ b/todo-list-svelte/public/index.html
@@ -7,7 +7,7 @@
     <title>Svelte app</title>
 
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./build/style.css" />
 
     <script defer src="/build/bundle.js"></script>
   </head>
